--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -250,14 +250,20 @@
 .image-card {
   width: 90%;
   min-width: 260px;
+  max-height: 400px;
   -webkit-transition: .5s;
   transition: .5s;
   border: 2px solid black;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .image-card-detail {
+  min-width: 260px;
   max-width: 100vw;
   border: 2px solid black;
+  width: 90%;
 }
 
 .meal-description {
@@ -537,6 +543,7 @@ li {
   }
   .image-card {
     width: 70%;
+    height: 300px;
   }
   .btn-contact {
     width: 50%;
@@ -555,6 +562,7 @@ li {
   }
   .image-card {
     width: 85%;
+    height: 250px;
   }
   .about-image-div {
     float: none;
@@ -619,6 +627,9 @@ li {
   }
   .create-meal-form {
     width: 90%;
+  }
+  .image-card {
+    height: 350px;
   }
 }
 /*# sourceMappingURL=App.css.map */
