--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -237,13 +237,18 @@ $min_width:300px;
 .image-card {
   width:90%; 
   min-width: 260px;
+  max-height: 400px;
   transition: .5s;
   border: 2px solid black;
+  height: 300px;
+  object-fit: cover;
 }
 
 .image-card-detail {
+  min-width: 260px;
   max-width: 100vw;
   border: 2px solid black;
+  width:90%; 
 }
 
 .meal-description {
@@ -507,6 +512,7 @@ li {
 
   .image-card {
     width: 70%;
+    height:300px;
   }
 
   .btn-contact {
@@ -527,6 +533,7 @@ li {
   }
   .image-card {
     width: 85%;
+    height: 250px;
   }
   .about-image-div {
     float: none;
@@ -583,5 +590,8 @@ li {
   }
   .create-meal-form {
     width: 90%;
+  }
+  .image-card {
+    height:350px;
   }
 }
